# DynOSAM

./: README.md
docker/: Dockerfile.amd64  Dockerfile.amd64_custom  build_docker_amd64.sh  create_container_amd64.sh
docs/media/: INSTALL.md
dynosam/: CMakeLists.txt
dynosam/example/: dyno_sam.cc
dynosam/include/dynosam/backend/: Accessor-impl.hpp  Accessor.hpp  BackendDefinitions.hpp  BackendFactory.hpp  BackendModule.hpp  BackendModuleFactory.hpp  BackendPipeline.hpp  Formulation-impl.hpp  Formulation.hpp  ParallelHybridBackendModule.hpp  ParallelObjectISAM.hpp  PoseChangeBackendModule.hpp  RegularBackendModule.hpp
dynosam/include/dynosam/backend/rgbd/: HybridEstimator.hpp  VIOFormulation.hpp  WorldMotionEstimator.hpp  WorldPoseEstimator.hpp
dynosam/include/dynosam/backend/rgbd/impl/: test_HybridFormulations.hpp
dynosam/include/dynosam/dataprovider/: DataInterfacePipeline.hpp
dynosam/include/dynosam/factors/: HybridFormulationFactors.hpp
dynosam/include/dynosam/frontend/: Frontend-Definitions.hpp  FrontendModule.hpp  FrontendParams.hpp  FrontendPipeline.hpp  PoseChangeVIFrontend.hpp  RGBDInstanceFrontendModule.hpp  RegularVIFrontend.hpp  VIFrontend.hpp  VisionImuOutputPacket.hpp
dynosam/include/dynosam/frontend/imu/: ImuFrontend.hpp
dynosam/include/dynosam/frontend/solvers/: ConsecutiveFrameObjectMotionSolver.hpp  HybridObjectMotionSRIF.hpp  HybridObjectMotionSmoother.hpp  HybridObjectMotionSolver-Impl.hpp  HybridObjectMotionSolver.hpp  MotionOnlyRefinementSolver.hpp  MotionOnlySolver.hpp  ObjectMotionSolver.hpp  OpticalFlowAndPoseSolver.hpp  PnPRansac.hpp
dynosam/include/dynosam/frontend/vision/: FeatureTracker.hpp  FeatureTrackerBase.hpp  Frame.hpp  MotionSolver-inl.hpp  MotionSolver.hpp  Vision-Definitions.hpp  VisionTools.hpp
dynosam/include/dynosam/pipeline/: PipelineBase-inl.hpp  PipelineBase.hpp  PipelineManager.hpp  ThreadSafeQueue.hpp
dynosam/include/dynosam/visualizer/: Display.hpp  VisualizerPipelines.hpp
dynosam/params/: FrontendParams.yaml  PipelineParams.yaml  backend.flags  frontend.flags  pipeline.flags
dynosam/src/backend/: Accessor.cc  BackendDefinitions.cc  Formulation.cc  ParallelHybridBackendModule.cc  ParallelObjectISAM.cc  PoseChangeBackendModule.cc  RegularBackendModule.cc
dynosam/src/backend/rgbd/: HybridEstimator.cc  VIOFormulation.cc  WorldMotionEstimator.cc
dynosam/src/dataprovider/: DataInterfacePipeline.cc
dynosam/src/factors/: HybridFormulationFactors.cc
dynosam/src/frontend/: FrontendParams.cc  PoseChangeVIFrontend.cc  RGBDInstanceFrontendModule.cc  RegularVIFrontend.cc  VIFrontend.cc  VisionImuOutputPacket.cc
dynosam/src/frontend/imu/: ImuFrontend.cc
dynosam/src/frontend/solvers/: ConsecutiveFrameObjectMotionSolver.cc  HybridObjectMotionSRIF.cc  HybridObjectMotionSmoother.cc  HybridObjectMotionSolver.cc  ObjectMotionSolver.cc  PnPRansac.cc
dynosam/src/frontend/vision/: FeatureTracker.cc  FeatureTrackerBase.cc  Frame.cc  MotionSolver.cc  StaticFeatureTracker.cc  VisionTools.cc
dynosam/src/pipeline/: PipelineManager.cc
dynosam/src/visualizer/: VisualizerPipelines.cc
dynosam/test/: test_code_concepts.cc  test_hybrid_motion.cc  test_pipelines.cc  test_rgbd_backend.cc  test_structured_containers.cc  test_types.cc
dynosam/test/internal/: backend_runners.hpp  helpers.hpp  simulator.cc
dynosam_common/: CMakeLists.txt
dynosam_common/include/dynosam_common/: DynamicObjects.hpp  DynoState.hpp  Exceptions.hpp  GroundTruthPacket.hpp  ModuleBase.hpp  MotionKeyFrame.hpp  RealtimeOutput.hpp  SensorModels.hpp  StructuredContainers.hpp  Trajectories.hpp  Types.hpp
dynosam_common/include/dynosam_common/logger/: Logger.hpp
dynosam_common/include/dynosam_common/utils/: CsvParser.hpp  JsonUtils.hpp  Timing.hpp  TimingStats.hpp
dynosam_common/include/dynosam_common/viz/: Colour.hpp
dynosam_common/src/: DynamicObjects.cc  DynoState.cc  GroundTruthPacket.cc  MotionKeyFrame.cc  SensorModels.cc  Trajectories.cc
dynosam_common/src/logger/: Logger.cc
dynosam_common/src/utils/: TimingStats.cc
dynosam_common/test/: test_ground_truth.cc  test_main.cc  test_trajectories.cc  test_types.cc
dynosam_cv/include/dynosam_cv/: Feature.hpp  RGBDCamera.hpp
dynosam_cv/src/: Feature.cc  RGBDCamera.cc
dynosam_nn/: CMakeLists.txt
dynosam_nn/nodes/: ImageSegmenterNode.cc
dynosam_opt/include/dynosam_opt/: ISAM2-impl.hpp  IncrementalOptimization.hpp  Map.hpp  MapNodes-inl.hpp  MapNodes.hpp  NonlinearOptimizer.hpp  Symbols.hpp
dynosam_opt/src/: FactorGraphTools.cc  ISAM2.cc  IncrementalOptimization.cc  Symbols.cc
dynosam_ros/include/dynosam_ros/: DataProviderRos.hpp  MultiSync.hpp  OnlineDataProviderRos.hpp
dynosam_ros/include/dynosam_ros/displays/backend_displays/: HybridBackendDisplay.hpp
dynosam_ros/include/dynosam_ros/displays/dynamic_slam_displays/: BackendDSDRos.hpp  DSDCommonRos.hpp  FrontendDSDRos.hpp
dynosam_ros/include/dynosam_ros/displays/inbuilt_displays/: BackendInbuiltDisplayRos.hpp  FrontendInbuiltDisplayRos.hpp
dynosam_ros/launch/: dyno_sam_launch.py  dyno_sam_online_rgbd_launch.py  dyno_sam_online_rgbdm_launch.py
dynosam_ros/nodes/: dynosam_tracking_demo_node.cc
dynosam_ros/rviz/: rviz_dsd.rviz
dynosam_ros/scripts/: run_dynosam_gtest.py
dynosam_ros/src/: DataProviderRos.cc  OnlineDataProviderRos.cc  PipelineRos.cc  RosUtils.cc
dynosam_ros/src/displays/backend_displays/: HybridBackendDisplay.cc
dynosam_ros/src/displays/dynamic_slam_displays/: BackendDSDRos.cc  DSDCommonRos.cc  FrontendDSDRos.cc
dynosam_ros/test/: test_online_dataprovider_ros.cc
dynosam_utils/dynosam_utils/evaluation/: evaluation_lib.py  filesystem_utils.py  runner.py
dynosam_utils/dynosam_utils/evaluation/core/: plotting.py
dynosam_utils/scripts/: eval_launch.py
dynosam_utils/src/: analyse_hybrid_object_motion_smoother_debug.py  analyse_hybrid_object_motion_solver_detail.py  dyno_sam_plots.py  frontend_filtering_experiments.py
